tests/out/semi_colon.test
Cog: Syntax Error: (3:6): Unqualified token
    ----> tests/semi_colon.cg
       |
     2 |     let age := 20
     3 |     let age2 := 40;
       |     ^~~             : did you forget a ';'
cog: 1 parsing errors occurred
Cog: compilation aborted
